--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
-          <li><a href="about.html">A Cerca de mi</a></li>
+          <li><a href="about.html">Acerca de</a></li>
           <li><a href="gallery.html" class="active">Trabajos realizados</a></li>
           <li><a href="contact.html" class="active">Contacto</a></li>
         </ul>
@@ -67,18 +67,24 @@
   </header>
 
   <main class="main">
+    <section id="hero" class="hero section">
 
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="200">
+            <h2><span class="underlight">Contactanos</span><span></span></h2>
+            <p class="mb-0">Puedes enviarme un correo con tus datos y el servicio que deseas obtener tal como una reparacion de mueble , un mueble personalizado a tu espacio , un servicio de construccion u alguna otra cosa que desees realizar para personalizar mas tu hogar.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
-            <div class="col-lg-8">
-              <h1>Contactame</h1>
-              <p class="mb-0">Puedes enviarme un correo con tus datos y el servicio que deseas obtener tal como una reparacion de mueble , un mueble personalizado a tu espacio , un servicio de construccion u alguna otra cosa que desees realizar para personalizar mas tu hofar
-
-              </p>
-            </div>
+            
           </div>
         </div>
       </div>
