--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Constructora HMGC</title>
     <style>
     body {
-      background-image: url('assets/img/fondo.jpg');  /* Ruta a tu imagen */
+      background-image: url('assets/img/fg.jpg');  /* Ruta a tu imagen */
       background-repeat: repeat;           /* Se repite en ambas direcciones */
-      background-size: 500px auto;               /* Tamaño original de la imagen */
+      background-size: 00px auto;               /* Tamaño original de la imagen */
       margin: 0;
       padding: 0;
     }
@@ -39,8 +39,9 @@
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
+    
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
-
+      
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <i class="bi bi-hammer"></i>
         <h1 class="sitename">Constructora HMGC</h1>
@@ -49,7 +50,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
-          <li><a href="about.html" class="active">Acerca de mi</a></li>
+          <li><a href="about.html" class="active">Acerca de</a></li>
           <li><a href="gallery.html" class="active">Trabajos realizados</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
@@ -59,7 +60,7 @@
       <div class="header-social-links">
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="#" class="whatsapp"><i class="bi bi-bi bi-whatsapp"></i></a>
       </div>
 
     </div>
@@ -73,8 +74,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
-            <h2>Somos<span class="underlight">Constructora HMGC </span><span>Carpinteros por oficio </span></h2>
-            <p>Transformamos tu idea en realidad, con madera de calidad, atención personalizada y un equipo siempre a tu lado </p>
+            <h2>Somos<span class="underlight">Constructora HMGC </span></h2>
+            <p>Transformamos tus ideas en realidad, con productos de calidad,atención personal y un equipo siempre a tu lado </p>
             <a href="contact.html" class="btn-get-started">Contactame!<br></a>
           </div>
         </div>
@@ -91,80 +92,73 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/alacena cocina (2).png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/alacena cocina (2).png" title="Alacena Cocina de 3 filas , 1 columnas para cocina" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/alacena doble.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/alacena doble.png" title="Repísa Doble columnas , 5 filas para alamcenaje" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/casa pajaro (2).png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/casa pajaro (2).png" title="Casa de pajaros grande de 1 puerta" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/Closed de pared.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/Closed de pared.png" title="Closed de pared Doble columna, 5 filas" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/escritorio computador.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/escritorio computador.png" title="Escritorio de 2M para computador con repisas inferiores" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/muebel cocina.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/muebel cocina.png" title="Mueble de cocina con 4 cajones para almacena de utencilios y espacio para galon de gas " class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/Repisa Campana.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/Repisa Campana.png" title="Repisa aerea para almacena superior a campana de cocina" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-8-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Productos/repisa loza cocina.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-8-2.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/Productos/repisa loza cocina.png" title="Repisas aeres para loza de cocina de 2 puertas y almacenaje inferior" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -186,7 +180,7 @@
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href=""><i class="bi bi-whatsapp"></i></a>
       </div>
     </div>
       <div class="credits">
